--- a/style.css
+++ b/style.css
@@ -1,27 +1,73 @@
 header {
-
+text-align: center;
 }
 
 body {
-display: flex;
-flex-flow: row wrap;
+
 justify-content: space-around;
 align-items: stretch;
 background: white;
 
+
 }
 
 .leftMain {
+display: flex;
 flex-direction: column;
+justify-content: flex-start;
 background: yellow;
 flex-wrap: wrap;
 justify-content: space-around;
+
 }
 
 
 
 
-
+.navigation {
+    list-style: none;
+    margin: 0;
+    background: deepskyblue;
+    display: flex;
+    justify-content: flex-end;
+  }
+  
+  .navigation a {
+    text-decoration: none;
+    display: block;
+    padding: 1em;
+    color: white;
+  }
+  
+  .navigation a:hover {
+    background: darken(deepskyblue, 2%);
+  }
+  
+  @media all and (max-width: 800px) {
+    .navigation {
+      justify-content: space-around;
+    }
+  }
+  
+  @media all and (max-width: 600px) {
+    .navigation {
+      -webkit-flex-flow: column wrap;
+      flex-flow: column wrap;
+      padding: 0;
+    }
+    
+    .navigation a { 
+      text-align: center; 
+      padding: 10px;
+      border-top: 1px solid rgba(255,255,255,0.3); 
+      border-bottom: 1px solid rgba(0,0,0,0.1); 
+    }
+  
+    
+    .navigation li:last-of-type a {
+      border-bottom: none;
+    }
+  }
 
 
 
