--- a/style.css
+++ b/style.css
@@ -3,33 +3,47 @@ text-align: center;
 }
 
 body {
-
+display: grid;
 justify-content: space-around;
 align-items: stretch;
-background: white;
-
-
+background-image: url("3D-Futuristic-Room-Wallpaper.jpg")
+/*background-image: url("436696-PEGWZV-99.jpg")*/
+}
+#stats {
+  text-align: center;
 }
 
 .leftMain {
 display: flex;
 flex-direction: column;
 justify-content: flex-start;
-background: yellow;
+background:#41B7FE;
 flex-wrap: wrap;
 justify-content: space-around;
 
 }
 
+p {
+  color: white;
+}
+
+#keys {
+  text-align: center;
+}
+
+li{
+  border: 1px solid black;
+}
 
 
 
 .navigation {
     list-style: none;
     margin: 0;
-    background: deepskyblue;
+    background: #41B7FE;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    border: 1px solid black;
   }
   
   .navigation a {
