finally got logic to work

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ background-image: radial-gradient(#552780, #41B7FE 70%);
 p {
   color: white;
   text-align: center;
-  font-size: 25px;
+  font-size: 40px;
 }
 
 #keys {
@@ -47,12 +47,12 @@ p {
 }
 
 li{
-  height: 50px;
-  width: 50px;
+  height: 70px;
+  width: 70px;
   padding-left: 20px;
   padding-right: 20px;
+  font-size: 40px
 }
-
 
 
 .navigation {
@@ -60,8 +60,9 @@ li{
     margin: 0;
     background: #41B7FE;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     background-image: radial-gradient(#552780, #41B7FE 70%);
+    height: 100px;
   }
   
   .navigation a {
